--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.15.18",
     "@react-oauth/google": "^0.12.1",
     "babel-preset-es2015": "^6.24.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^4.0.3"
